fix #40387: In shift trade quests, pop up schedule table is showed in wrong position

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -10,6 +10,10 @@
         position:relative;
     }
 
+    md-tab-content{
+        transform: inherit !important;//why transform nothing? what about all the position fixed element inside
+    }
+
     .show-replay{
         display:block !important;
     }
